this i changed some errors

--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,8 @@
       <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
-        import { getDatabase,ref,set,onValue} from "https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js";
-        import { getStorage,ref as stRef,uploadBytesResumable} from "https://www.gstatic.com/firebasejs/9.17.1/firebase-storage.js";
+        import { getDatabase,ref,set,onValue} from "https://www.gstatic.com/firebasejs/9.17.2/firebase-database.js";
+        import { getStorage,ref as StRef,uploadBytesResumable} from "https://www.gstatic.com/firebasejs/9.17.2/firebase-storage.js";
         // TODO: Add SDKs for Firebase products that you want to use
         // https://firebase.google.com/docs/web/setup#available-libraries
       
@@ -73,6 +73,7 @@
                 Genre : movieGenre.value,
                 Cast : movieCast.value,
                 Synopsis :movieSynopsis.value,
+                movieName : filename
             }
             console.log(movie)
             let movieRef = ref(database,`Movies/${movieIndex}`)
