this i changed some errors

--- a/public/index.html
+++ b/public/index.html
@@ -9,34 +9,29 @@
     <title>Vicky Mini NetFlix</title>
 </head>
 <body>
-    <div class="container-fluid">
-      <h6>Vicky-Mini-Netflix</h6>
-          <div class="col-md-9 mx-auto shadow py-4 my-4 d-lg-flex d-sm-block shadow-5" style="background-image: url(./blue-cardboard-background-flat-lay-top-view_164357-2984.avif); background-repeat:no-repeat; background-size:cover">
-              <div class="col-lg-6 col-sm-12 px-5 fw-ligther d-flex">
+    <div class="container-fluid col-lg-6">
+      <h6 class="fw-lighter fs-1 mt-3 text-center text-muted">Vicky-Mini-Netflix Application</h6>
+          <div class="rounded rounded-3 col-md-9 col-lg-10 mx-auto my-4  shadow-5" style="background-image: url(./blue-cardboard-background-flat-lay-top-view_164357-2984.avif); background-repeat:no-repeat; background-size:cover">
+              <div class="col-sm-12 px-5 fw-ligther d-flex px-3 d-lg-flex">
                     <div class="row">
-    <div class="text-muted d-lg-flex d-sm-block">
-        <h1 class="fw-lighter fs-1 text-center">Upload Your Movie Here</h1>
-    </div>
     <div class="placehoderDiv">
+      <h1 class="fw-lighter fs-1 text-center">Upload Your Movie Here</h1>
       <h6 class="fw-light fs-5 mt-1">Movie Title</h6>
-      <input type="text" placeholder="Movie Title" id="movieTitle" class="form-control px-3 mt-2 fw-ligther">
+      <input type="text" placeholder="Enter Your Movie Title" id="movieTitle" class="form-control px-3 mt-2 fw-ligther">
           <h6 class="fw-light fs-5 mt-1">Movie Duration</h6>
-      <input type="text" placeholder="Movie Duration" id="movieDuration" class="form-control px-3 mt-2 fw-ligther">
+      <input type="text" placeholder=" Enter Your Movie Duration" id="movieDuration" class="form-control px-3 mt-2 fw-ligther">
           <h6 class="fw-light fs-5 mt-1">Movie Genre</h6>
-      <input type="text" placeholder="Movie Genre" id="movieGenre" class="form-control px-3 mt-2 fw-ligther">
+      <input type="text" placeholder=" Enter Your Movie Genre" id="movieGenre" class="form-control px-3 mt-2 fw-ligther">
           <h6 class="fw-light fs-5 mt-1">Movie Cast</h6>
-      <input type="text" placeholder="Movie Cast" id="movieCast" class="form-control px-3 mt-2 fw-ligther">
+      <input type="text" placeholder=" Enter Your Movie Cast" id="movieCast" class="form-control px-3 mt-2 fw-ligther">
           <h6 class="fw-light fs-5 mt-1">Movie Synopsis</h6>
-      <input type="text" placeholder="Movie Synopsis" id="movieSynopsis" class="form-control px-3 mt-2 fw-ligther">
+      <input type="text" placeholder=" Enter Your Movie Synopsis" id="movieSynopsis" class="form-control px-3 mt-2 fw-ligther">
           <h6 class="fw-light fs-5 mt-1">Choose Your  Movie Here</h6>
       <input type="file" id="movieFile" class="form-control">
-      <div class=" ms-5 px-5 col-sm-12">
+      <div class="ms-5 mb-4 mt-2">
         <button id="uploadBtn" class="btn btn-info fw-ligther px-3 mt-3">Upload Your Movie</button>
       </div>
     </div>
-    <div class="parent"></div>
-    <div class="sister"></div>
-    <div class="brother"></div>
   </div>
       <script type="module">
         // Import the functions you need from the SDKs you need
