--- a/public/Neflix.html
+++ b/public/Neflix.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row" id="rowDiv">
             <div class="col-md-4">
 
             </div>
@@ -40,6 +40,27 @@
                 const app = initializeApp(firebaseConfig);
                 const database = getDatabase();
                 const storage = getStorage()
+                let allMoviesRef = ref(database,"allMovies")
+                onValue(allMoviesRef,(snapshot)=>{
+                    let data = snapshot.val()
+                    console.log(data)
+                    myRowDiv.innerHTML =""
+                   
+                    data.map((movie)=>{
+                        let movieRef = stRef(storage,`${movie.movieName}`)
+                        getDownloadURL(movieRef).then((url)=>{
+                            console.log(url)
+                        })
+                        myRowDiv.innerHTML += `
+                        <div class="card col-md-4">
+                            <p>${movie.title}</p>
+                            <p>${movie.genre}</p>
+                            <p>${movie.duration}</p>
+                            <small>${movie.cast}</small>
+                        </div>
+                        `
+                    })
+                })
     </script>
 </body>
 </html>
