i added animate.css to  my netflix page

--- a/public/Neflix.html
+++ b/public/Neflix.html
@@ -13,8 +13,11 @@
 
 </head>
 <body>
+    <div class="text-center container fw-lighter animate__animated animate__bounceInLeft">
+        <h5>Vicky Mini-Netflix-Application</h5>
+    </div>
     <div class="container-fluid">
-        <div class="row" id="rowDiv">
+        <div class="row" id="myRowDiv">
             <div class="col-md-4">
 
             </div>
