i changed my config url

--- a/public/Neflix.html
+++ b/public/Neflix.html
@@ -33,12 +33,13 @@
                   
                     // Your web app's Firebase configuration
                     const firebaseConfig = {
-                      apiKey: "AIzaSyA2INvQ3pCavO4lkqX8lQifV3Z-8jNTrQA",
-                      authDomain: "vicky-netflix-application.firebaseapp.com",
-                      projectId: "vicky-netflix-application",
-                      storageBucket: "vicky-netflix-application.appspot.com",
-                      messagingSenderId: "754229905760",
-                      appId: "1:754229905760:web:f8aea695d4e9969a1af605"
+                        apiKey: "AIzaSyA2INvQ3pCavO4lkqX8lQifV3Z-8jNTrQA",
+                        authDomain: "vicky-netflix-application.firebaseapp.com",
+                        databaseURL: "https://vicky-netflix-application-default-rtdb.firebaseio.com",
+                        projectId: "vicky-netflix-application",
+                        storageBucket: "vicky-netflix-application.appspot.com",
+                        messagingSenderId: "754229905760",
+                        appId: "1:754229905760:web:f8aea695d4e9969a1af605"
                     };
 
                   
