i added some script tag

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
       <input type="file" id="movieFile" class="form-control">
       <div class="ms-5 mb-4 mt-2">
         <button id="uploadBtn" class="btn btn-info fw-ligther px-3 mt-3">Upload Your Movie</button>
+        <a href="./Neflix.html">
+            <button class="btn btn-info fw-ligther px-3 mt-3">DashBoard</button>
+        </a>
       </div>
     </div>
     <div id="progressBar" class="progressBar
