--- a/public/Neflix.html
+++ b/public/Neflix.html
@@ -23,7 +23,14 @@
             </div>
         </div>
     </div>
+    <div id="loading" style="display: none;" class="position-absolute top-0 start-0 end-0 bottom-0 align-items-center justify-content-center">
+        <p> <span class="spinner-border text-danger fs-5"></span>Loading...</p>
+    </div>
     <script type="module">
+        let fetchingData = true
+        if (fetchingData) {
+            loading.style.display = "flex"
+        }
                 // Import the functions you need from the SDKs you need
                 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
                 import { getDatabase,ref,set,onValue} from "https://www.gstatic.com/firebasejs/9.17.2/firebase-database.js";
@@ -49,8 +56,17 @@
                 const storage = getStorage()
                 
 
-                let allMoviesRef = ref(database,"Movie")
-                onValue(allMoviesRef,(snapshot)=>{
+                const allMoviesRef = ref(database, `Movie`);
+                    onValue(allMoviesRef, (snapshot)=>{
+                    fetchingData = false
+                    setTimeout(()=>{
+                        if (!fetchingData) {
+                            loading.style.display = "none"
+                        }
+                    },9000)
+                   })
+
+                    onValue(allMoviesRef,(snapshot)=>{
                     let data = snapshot.val()
                     console.log(data)
                     myRowDiv.innerHTML =""
